[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/themes/kenneyUI-blue.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/VCRosdNEUE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/race_questions/q8a3.png" type="Texture" id=3]
[ext_resource path="res://assets/race_questions/q8a1.png" type="Texture" id=4]
[ext_resource path="res://assets/race_questions/q8.png" type="Texture" id=5]
[ext_resource path="res://assets/race_questions/q8a2.png" type="Texture" id=6]
[ext_resource path="res://assets/race_questions/q8a4.png" type="Texture" id=7]
[ext_resource path="res://assets/themes/kenneyUI-red.tres" type="Theme" id=8]
[ext_resource path="res://assets/race_questions/help_card.png" type="Texture" id=9]
[ext_resource path="res://minigames/fractionrace/ui/HUDFR.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.752941, 0.94902, 0.835294, 1 )

[sub_resource type="Theme" id=10]
Panel/styles/panel = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUDFR" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -472.0
theme = SubResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="BackBtnMargin" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_right = 171.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50

[node name="BackBtn" type="Button" parent="Panel/HBoxContainer/BackBtnMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 151.0
margin_bottom = 78.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 11 )
text = "BACK"

[node name="QuestionMargin" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 191.0
margin_right = 832.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.75
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/QuestionMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 631.0
margin_bottom = 118.0
alignment = 1

[node name="question" type="TextureRect" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer"]
margin_right = 621.0
margin_bottom = 52.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer"]
margin_top = 56.0
margin_right = 621.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_constants/separation = 30

[node name="answerA" type="Button" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer"]
margin_right = 132.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerA"]
margin_right = 135.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 4

[node name="answerB" type="Button" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 295.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerB"]
margin_right = 135.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 4

[node name="answerC" type="Button" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer"]
margin_left = 325.0
margin_right = 458.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerC"]
margin_right = 135.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="answerD" type="Button" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer"]
margin_left = 488.0
margin_right = 621.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerD"]
margin_right = 135.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="EndQuestions" type="MarginContainer" parent="Panel/HBoxContainer"]
visible = false
margin_left = 191.0
margin_right = 832.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.75
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Panel/HBoxContainer/EndQuestions"]
margin_left = 10.0
margin_top = 10.0
margin_right = 631.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Wow :O!! You answered 
all questions!!"
align = 1
valign = 1

[node name="PauseBtnMargin" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 852.0
margin_right = 1024.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50

[node name="PauseBtn" type="Button" parent="Panel/HBoxContainer/PauseBtnMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 152.0
margin_bottom = 78.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 11 )
text = "PAUSE"

[node name="Time" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
custom_fonts/font = SubResource( 13 )
text = "0"
align = 1
valign = 1

[node name="PausedScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0784314, 0.0784314, 0.627451 )

[node name="CenterContainer" type="CenterContainer" parent="PausedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PausedScreen/CenterContainer"]
margin_left = 303.0
margin_top = 70.0
margin_right = 720.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="PausedScreen/CenterContainer/VBoxContainer"]
margin_right = 417.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 14 )
text = "PAUSED!"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="PausedScreen/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 417.0
margin_bottom = 370.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="ResumeBtn" type="Button" parent="PausedScreen/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 380.0
margin_right = 417.0
margin_bottom = 460.251
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
text = "RESUME"

[node name="StartScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0784314, 0.0784314, 0 )

[node name="CenterContainer" type="CenterContainer" parent="StartScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen/CenterContainer"]
margin_left = 359.0
margin_top = 220.0
margin_right = 665.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="Title" type="Label" parent="StartScreen/CenterContainer/VBoxContainer"]
margin_right = 306.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 14 )
text = "Get Ready!!"
align = 1
valign = 1

[node name="Label" type="Label" parent="StartScreen/CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 306.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 14 )
text = "##"
align = 1
valign = 1

[node name="StartTimer" type="Timer" parent="StartScreen"]
pause_mode = 2

[connection signal="button_up" from="Panel/HBoxContainer/BackBtnMargin/BackBtn" to="." method="_on_BackBtn_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerA" to="." method="_on_answerA_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerB" to="." method="_on_answerB_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerC" to="." method="_on_answerC_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/QuestionMargin/VBoxContainer/HBoxContainer/answerD" to="." method="_on_answerD_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/PauseBtnMargin/PauseBtn" to="." method="_on_PauseBtn_button_up"]
[connection signal="button_up" from="PausedScreen/CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_button_up"]
